--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -3,3 +3,12 @@ server:
 spring:
   application:
     name: gateway-server
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: false
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:1000/eureka/
