--- a/service-provider/user-provider/src/main/resources/application.yml
+++ b/service-provider/user-provider/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 spring:
   application:
     name: user-service-provider
+  elasticsearch:
+    jest:
+      uris: http://47.98.174.58:9200
 eureka:
   client:
     service-url:
