--- a/service-provider/user-provider/build.gradle
+++ b/service-provider/user-provider/build.gradle
@@ -1,3 +1,6 @@
 dependencies{
+    testCompile ('org.springframework.boot:spring-boot-starter-test')
     compile(project(':service-api:user-api'))
+    compile('org.springframework.boot:spring-boot-starter-data-elasticsearch')
+    compile('io.searchbox:jest:2.4.0')
 }
